# mini-claude-code

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: hello.py
scripts/: run_local.sh
src/mini_claude_code/: __main__.py  cli.py  config.py
src/mini_claude_code/core/: __init__.py  agent.py
src/mini_claude_code/llm/: anthropic_client.py
src/mini_claude_code/logging/: __init__.py  llm_logger.py  serializers.py  types.py
src/mini_claude_code/tools/: __init__.py  base.py  bash.py  edit_file.py  path_safety.py  read_file.py  registry.py  runner.py  sub_agent.py  todo.py  write_file.py
