[tool.poetry]
name = "mini-claude-code"      # 项目名（对外展示、打包用）
version = "0.1.0"
description = "Mini Claude code project"
authors = ["welkin <welkin105380@163.com>"]
packages = [{ include = "mini_claude_code", from = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
python-dotenv = "^1.2.2"
anthropic = "^0.84.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[tool.poetry.scripts]
mini-claude = "mini_claude_code.cli:main"

